Add licence description and readme for package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,14 @@
 name = "uea_ucr_datasets"
 version = "0.1.0"
 description = "A small package for loading and handling UEA UCR time series classification datasets."
+licence = "LGPL-3.0+"
+readme = "README.md"
+repository = "https://github.com/BorgwardtLab/uea_ucr_datasets"
 authors = ["Max Horn <max.horn@bsse.ethz.ch>"]
 include = ["README.md"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "~3.6"
 sktime = "^0.3.1"
 
 [tool.poetry.dev-dependencies]
