Reduce version requirement of sktime to support python 3.6

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "uea_ucr_datasets"
-version = "0.1.0"
+version = "0.1.1"
 description = "A small package for loading and handling UEA UCR time series classification datasets."
 licence = "LGPL-3.0+"
 readme = "README.md"
@@ -9,8 +9,8 @@ authors = ["Max Horn <max.horn@bsse.ethz.ch>"]
 include = ["README.md"]
 
 [tool.poetry.dependencies]
-python = "~3.6"
-sktime = "^0.3.1"
+python = "^3.6"
+sktime = "^0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
