--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "uea_ucr_datasets"
 version = "0.1.2"
 description = "A small package for loading and handling UEA UCR time series classification datasets."
-licence = "LGPL-3.0+"
+license = "LGPL-3.0+"
 readme = "README.md"
 repository = "https://github.com/BorgwardtLab/uea_ucr_datasets"
 authors = ["Max Horn <max.horn@bsse.ethz.ch>"]
