--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ include = ["README.md"]
 
 [tool.poetry.dependencies]
 python = ">=3.6.1"
-sktime = "^0.3"
+sktime = ">=0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
